<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/unamnoche"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tVNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/noricanregular"
        android:text="@string/nombre"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058" />

    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:fontFamily="@font/noricanregular"
        android:onClick="clicks"
        android:text="@string/botonenviar"
        android:textAllCaps="false"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.919" />

    <TextView
        android:id="@+id/tVFechaNacimiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/noricanregular"
        android:text="@string/nacimiento"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.221"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.251" />

    <TextView
        android:id="@+id/tVNumCta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/noricanregular"
        android:text="@string/numcta"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.207"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.469" />

    <TextView
        android:id="@+id/tVCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/noricanregular"
        android:text="@string/correo"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.127"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.675" />

    <EditText
        android:id="@+id/etCta"
        android:layout_width="292dp"
        android:layout_height="51dp"
        android:ems="10"
        android:fontFamily="@font/noricanregular"
        android:hint="@string/hntnocta"
        android:inputType="number"
        android:maxLength="9"
        android:textAlignment="center"
        android:textColor="@color/teal_200"
        android:textColorHint="@color/material_on_surface_emphasis_medium"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.573" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="286dp"
        android:layout_height="62dp"
        android:ems="10"
        android:fontFamily="@font/noricanregular"
        android:hint="@string/htnombre"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/teal_200"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.143" />


    <EditText
        android:id="@+id/etCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/noricanregular"
        android:hint="@string/hntemail"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@color/teal_200"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.776" />

    <EditText
        android:id="@+id/etNacimientoDia"
        android:layout_width="104dp"
        android:layout_height="66dp"
        android:ems="10"
        android:fontFamily="@font/noricanregular"
        android:hint="@string/hntdia"
        android:inputType="number"
        android:maxLength="2"
        android:textAlignment="center"
        android:textColor="@color/teal_200"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.351" />

    <EditText
        android:id="@+id/etNacimientoMes"
        android:layout_width="104dp"
        android:layout_height="66dp"
        android:ems="10"
        android:fontFamily="@font/noricanregular"
        android:hint="@string/hntmes"
        android:inputType="number"
        android:maxLength="2"
        android:textAlignment="center"
        android:textColor="@color/teal_200"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35000002" />

    <EditText
        android:id="@+id/etNacimientoYear"
        android:layout_width="104dp"
        android:layout_height="66dp"
        android:ems="10"
        android:fontFamily="@font/noricanregular"
        android:hint="@string/htnyear"
        android:inputType="number"
        android:maxLength="4"
        android:textAlignment="center"
        android:textColor="@color/teal_200"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.91"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35000002" />

</androidx.constraintlayout.widget.ConstraintLayout>